<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/skin_background_color"
        android:orientation="vertical">

        <include layout="@layout/layout_temp_view" />

        <com.lyy.ui.pulltorefresh.PullToRefreshScrollView
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/selected_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_v_8">


                <com.lyy.ui.widget.AutoScrollViewPager
                    android:id="@+id/banner_View_pager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/banner_height" />

                <com.lyy.ui.widget.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="-28dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/gift_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/game_gift_code"
                        android:textColor="@color/skin_text_gray_color" />

                    <TextView
                        android:id="@+id/game_raiders"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/game_raiders"
                        android:textColor="@color/skin_text_gray_color" />

                    <TextView
                        android:id="@+id/game_evaluation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/game_evaluation"
                        android:textColor="@color/skin_text_gray_color" />

                    <TextView
                        android:id="@+id/game_open_server"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/game_open_server"
                        android:textColor="@color/skin_text_gray_color" />
                </LinearLayout>

                <com.lyy.ui.widget.AutoVerticalScrollViewPager
                    android:id="@+id/vertical_banner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/game_recommend_height"
                    android:layout_marginTop="@dimen/margin_v_8"
                    app:avs_can_scroll="false"
                    app:avs_interval="12000" />

                <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/list"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="@dimen/margin_v_8" />-->
                <!--<ListView-->

                <com.lyy.ui.widget.NoScrollListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_v_8"
                    android:divider="@null"
                    android:listSelector="@color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bottom_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:text="到底咯~"
                        android:textColor="@color/skin_text_gray_color"
                        android:textSize="@dimen/text_larger" />

                    <TextView
                        android:id="@+id/return_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="[返回顶部]"
                        android:textColor="@color/skin_text_gray_color"
                        android:textSize="@dimen/text_larger" />

                </LinearLayout>

            </LinearLayout>

        </com.lyy.ui.pulltorefresh.PullToRefreshScrollView>


    </LinearLayout>
</layout>
